# Rust-frame-learn

./: .gitignore
llm-burn-app/: Cargo.toml  readme.md
llm-burn-app/src/: main.rs
pys/: gen_model.py  infer_local.py
rs-counter-study/: Cargo.toml
rs-counter-study/gateway/: envoy.yaml
rs-counter-study/protos/: messages.proto
rs-counter-study/src/: app_state.rs  config.rs  lib.rs  main.rs  result.rs  routes.rs
rs-counter-study/src/db/: cache.rs  kafka.rs  mq.rs
rs-counter-study/src/dto/: dto.rs
rs-counter-study/src/kafka/: productor.rs
rs-counter-study/src/middleware/: auth_middleware.rs
rs-counter-study/src/models/: model.rs  msg.rs
rs-counter-study/src/repository/: log.rs  users.rs
rs-counter-study/src/routes/: counter_record.rs
rs-counter-study/src/service/: logs_impl.rs
rs-counter-study/src/utils/: password.rs
rust-vedio-trans/: Cargo.toml
server-rust/: .env  Cargo.toml
server-rust/migrations/: 20240914075347_create_counters.down.sql  20240914075347_create_counters.up.sql  20240920090033_create_living_lab_users.down.sql  20240920090033_create_living_lab_users.up.sql  20240923093457_create_liviing_lab_access_logs.down.sql  20240923093457_create_liviing_lab_access_logs.up.sql  20240927082238_messages.down.sql  20240927082238_messages.up.sql
server-rust/src/: lib.rs  main.rs  result.rs  routes.rs
server-rust/src/db/: database.rs
server-rust/src/dto/: dto.rs
server-rust/src/error/: errors.rs
server-rust/src/handlers/: auth.rs  files.rs  health.rs  swagger.rs  users.rs
server-rust/src/models/: model.rs
server-rust/src/repository/: message.rs
server-rust/src/routes/: counter.rs  jwt.rs
server-rust/src/service/: users_impl.rs
server-rust/src/utils/: token.rs
server-rust/tests/: config_db_tests.rs  token.rs
tauri-app/: .env  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
tauri-app/src/: App.vue  main.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/api/: coupon.ts  event.ts  manager.ts  notice.ts  role.ts  rule.ts  skus.ts  type.ts  user.ts
tauri-app/src/common/: init.ts  tables.ts
tauri-app/src/components/: AsideList.vue  CountTo.vue  FormDrawer.vue  Header.vue  HelloWorld.vue  IconSelect.vue  IndexCard.vue  IndexChart.vue  IndexNavs.vue  ListHeader.vue  Logo.vue  Menu.vue  NotFound.vue  Snackbar.vue  TagInputs.vue  TagList.vue  TodoDemo.vue  UploadFile.vue
tauri-app/src/hooks/: locale.ts
tauri-app/src/layout/: Panel.vue
tauri-app/src/layouts/: BlankLayout.vue
tauri-app/src/locale/: en-US.ts  zh-CN.ts
tauri-app/src/router/: index.ts  private.ts  public.ts
tauri-app/src/scss/: _mixins.scss  _utils.scss  (+3 more)
(+68 files in other folders)
