[package]
name = "rs-counter-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
amqp = "0.1.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.1", features = ["trace", "request-id", "util"] }
tower = "0.5.0"
#sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "time"] }
# postgres
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "any", "postgres", "time", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
time = { version = "0.3.36", features = ["serde-human-readable"] }
anyhow = "1.0.86"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
once_cell = "1.19.0"
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
argon2 = "0.6.0-pre.1"
redis = { version = "0.27.2", features = ["aio", "tokio-comp"] }
prost = "0.13.3"
rdkafka = "0.36.2"
tonic = "0.12.3"
http = "1.1.0"
image = "0.25.2"
futures-util = "0.3.30"


[dev-dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.1", features = ["trace", "request-id", "util"] }
tower = "0.5.0"
#sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "time"] }
# postgres
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "any", "postgres", "time", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
time = { version = "0.3.36", features = ["serde-human-readable"] }
anyhow = "1.0.86"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
once_cell = "1.19.0"
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
argon2 = "0.6.0-pre.1"
redis = { version = "0.27.2", features = ["aio", "tokio-comp"] }
